font fine-tuning

--- a/app.html
+++ b/app.html
@@ -35,48 +35,8 @@
         <p>icon-radio</p>
       </li>
       <li>
-        <aside class="icon icon-camera"></aside>
-        <p>icon-camera</p>
-        <p>duplicado</p>
-      </li>
-      <li>
         <aside class="icon icon-geolocation"></aside>
         <p>icon-geolocation</p>
-      </li>
-      <li>
-        <aside class="icon icon-data-e"></aside>
-        <p>icon-data-e</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-data-h-plus"></aside>
-        <p>icon-data-h-plus</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      </li>
-      <li>
-        <aside class="icon icon-data-h"></aside>
-        <p>icon-data-h</p>
-        <p>Nos lo cargamos!</p>
-      <li>
-        <aside class="icon icon-data-o"></aside>
-        <p>icon-data-o</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-data-4g"></aside>
-        <p>icon-data-4g</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-data-3g"></aside>
-        <p>icon-data-3g</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-data-2g"></aside>
-        <p>icon-data-2g</p>
-        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-data"></aside>
@@ -151,8 +111,7 @@
         <p>icon-flag</p>
       </li>
       <li>
-        <aside class="icon icon-icon-forward"></aside>
-        <p>icon-icon-forward</p>
+        <aside class="icon icon-forward"></aside>
         <p>icon-forward</p>
       </li>
       <li>
@@ -184,8 +143,7 @@
         <p>icon-compose</p>
       </li>
       <li>
-        <aside class="icon icon-icon-contacts-edit"></aside>
-        <p>icon-icon-contacts-edit</p>
+        <aside class="icon icon-contacts-edit"></aside>
         <p>icon-contacts-edit</p>
       </li>
       <li>
@@ -305,8 +263,7 @@
         <p>icon-status-geolocalization</p>
       </li>
       <li>
-        <aside class="icon icon-status-fowarding-call"></aside>
-        <p>icon-status-fowarding-call</p>
+        <aside class="icon icon-status-call-fowarding"></aside>
         <p>icon-status-call-fowarding</p>
       </li>
       <li>
@@ -314,8 +271,7 @@
         <p>icon-status-play</p>
       </li>
       <li>
-        <aside class="icon icon-status-usb-mass-storage"></aside>
-        <p>icon-status-usb-mass-storage</p>
+        <aside class="icon icon-status-usb"></aside>
         <p>icon-status-usb</p>
       </li>
       <li>
@@ -335,104 +291,12 @@
         <p>icon-status-bluetooth</p>
       </li>
       <li>
-        <aside class="icon icon-status-notification-message"></aside>
-        <p>icon-status-notification-message</p>
+        <aside class="icon icon-status-message"></aside>
         <p>icon-status-message</p>
       </li>
       <li>
-        <aside class="icon icon-status-notification-round"></aside>
-        <p>icon-status-notification-round</p>
+        <aside class="icon icon-status-notification"></aside>
         <p>icon-status-notification</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-dots-glyth"></aside>
-        <p>icon-status-dots-glyth</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-0"></aside>
-        <p>icon-status-number-glyth-0</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-9"></aside>
-        <p>icon-status-number-glyth-9</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-8"></aside>
-        <p>icon-status-number-glyth-8</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-7"></aside>
-        <p>icon-status-number-glyth-7</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-6"></aside>
-        <p>icon-status-number-glyth-6</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-5"></aside>
-        <p>icon-status-number-glyth-5</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-4"></aside>
-        <p>icon-status-number-glyth-4</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-3"></aside>
-        <p>icon-status-number-glyth-3</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-2"></aside>
-        <p>icon-status-number-glyth-2</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-number-glyth-1"></aside>
-        <p>icon-status-number-glyth-1</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-data-e"></aside>
-        <p>icon-status-data-e</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-data-o"></aside>
-        <p>icon-status-data-o</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-data-four-g"></aside>
-        <p>icon-status-data-four-g</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-data-three-g"></aside>
-        <p>icon-status-data-three-g</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-data-two-g"></aside>
-        <p>icon-status-data-two-g</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-data-h"></aside>
-        <p>icon-status-data-h</p>
-        <p>Nos lo cargamos!</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-data-h-plus"></aside>
-        <p>icon-status-data-h-plus</p>
-        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-status-tethering"></aside>
@@ -461,16 +325,13 @@
       <li>
         <aside class="icon icon-status-signal-rectangles"></aside>
         <p>icon-status-signal-rectangles</p>
-        <p>Alineado por abajo con signal</p>
       </li>
       <li>
-        <aside class="icon icon-status-signal-no2"></aside>
-        <p>icon-status-signal-no2</p>
+        <aside class="icon icon-status-x-right"></aside>
         <p>icon-status-x-right</p>
       </li>
       <li>
-        <aside class="icon icon-status-signal-no"></aside>
-        <p>icon-status-signal-no</p>
+        <aside class="icon icon-status-x-top"></aside>
         <p>icon-status-x-top</p>
       </li>
       <li>
@@ -494,8 +355,7 @@
         <p>icon-status-signal-1</p>
       </li>
       <li>
-        <aside class="icon icon-status-airplane-cross"></aside>
-        <p>icon-status-airplane-cross</p>
+        <aside class="icon icon-status-x-left"></aside>
         <p>icon-status-x-left</p>
       </li>
       <li>
@@ -512,7 +372,7 @@
         <p>icon-status-battery-ask</p>
       </li>
       <li>
-        <aside class="icon icon-status-battery-empty"></aside>
+        <aside class="icon icon-status-battery"></aside>
         <p>icon-status-battery-empty</p>
         <p>icon-status-battery</p>
       </li>
@@ -521,8 +381,7 @@
     <header>Media</header>
     <ul>
       <li>
-        <aside class="icon icon-edit-photo-wallpaper"></aside>
-        <p>icon-edit-photo-wallpaper</p>
+        <aside class="icon icon-wallpaper-edit"></aside>
         <p>icon-wallpaper-edit</p>
       </li>
       <li>
@@ -550,22 +409,15 @@
         <p>icon-crop-1-1</p>
       </li>
       <li>
-        <aside class="icon icon-crop-background"></aside>
-        <p>icon-crop-background</p>
-        <p>El background en cada uno de los crops?</p>
-      </li>
-      <li>
         <aside class="icon icon-slideshow"></aside>
         <p>icon-slideshow</p>
       </li>
       <li>
-        <aside class="icon icon-auto-flash"></aside>
-        <p>icon-auto-flash</p>
+        <aside class="icon icon-flash-auto"></aside>
         <p>icon-flash-auto</p>
       </li>
       <li>
-        <aside class="icon icon-on-flash"></aside>
-        <p>icon-on-flash</p>
+        <aside class="icon icon-flash-on"></aside>
         <p>icon-flash-on</p>
       </li>
       <li>
@@ -577,8 +429,7 @@
         <p>icon-camera-back</p>
       </li>
       <li>
-        <aside class="icon icon-camera-video-recorder"></aside>
-        <p>icon-camera-video-recorder</p>
+        <aside class="icon icon-camera-video"></aside>
         <p>icon-camera-video</p>
       </li>
       <li>
@@ -603,13 +454,11 @@
         <p>icon-artist</p>
       </li>
       <li>
-        <aside class="icon icon-Capa-12"></aside>
-        <p>icon-Capa-12</p>
+        <aside class="icon icon-sort-date"></aside>
         <p>icon-sort-date</p>
       </li>
       <li>
-        <aside class="icon icon-alphabetical"></aside>
-        <p>icon-alphabetical</p>
+        <aside class="icon icon-sort-alphabetical"></aside>
         <p>icon-sort-alphabetical</p>
       </li>
       <li>
@@ -617,12 +466,11 @@
         <p>icon-shuffle</p>
       </li>
       <li>
-        <aside class="icon icon-infinite-repeat"></aside>
-        <p>icon-infinite-repeat</p>
+        <aside class="icon icon-repeat"></aside>
         <p>icon-repeat</p>
       </li>
       <li>
-        <aside class="icon icon-one-repeat"></aside>
+        <aside class="icon icon-repeat-once"></aside>
         <p>icon-one-repeat</p>
         <p>icon-repeat-once</p>
       </li>
@@ -659,8 +507,7 @@
     <header>Communications</header>
     <ul>
       <li>
-        <aside class="icon icon-email-remove-attach"></aside>
-        <p>icon-email-remove-attach</p>
+        <aside class="icon icon-email-remove"></aside>
         <p>icon-email-remove</p>
       </li>
       <li>
@@ -688,11 +535,6 @@
         <p>icon-contact-favorite</p>
       </li>
       <li>
-        <aside class="icon icon-contact-add-favorite"></aside>
-        <p>icon-contact-add-favorite</p>
-        <p>nos lo cargamos!</p>
-      </li>
-      <li>
         <aside class="icon icon-contact-link"></aside>
         <p>icon-contact-link</p>
       </li>
@@ -707,20 +549,17 @@
       <li>
         <aside class="icon icon-contact-email"></aside>
         <p>icon-contact-email</p>
-        <p>linea mas gruesa</p>
       </li>
       <li>
         <aside class="icon icon-expand"></aside>
         <p>icon-expand</p>
       </li>
       <li>
-        <aside class="icon icon-outgoing-sms"></aside>
-        <p>icon-outgoing-sms</p>
+        <aside class="icon icon-sms-outgoing"></aside>
         <p>icon-sms-outgoing</p>
       </li>
       <li>
-        <aside class="icon icon-incoming-sms"></aside>
-        <p>icon-incoming-sms</p>
+        <aside class="icon icon-sms-incoming"></aside>
         <p>icon-sms-incoming</p>
       </li>
       <li>
@@ -756,13 +595,11 @@
         <p>icon-dismiss-keyboard</p>
       </li>
       <li>
-        <aside class="icon icon-add-contact"></aside>
-        <p>icon-add-contact</p>
+        <aside class="icon icon-contact-add"></aside>
         <p>icon-contact-add</p>
       </li>
       <li>
-        <aside class="icon icon-switch-lines"></aside>
-        <p>icon-switch-lines</p>
+        <aside class="icon icon-switch"></aside>
         <p>icon-switch</p>
       </li>
       <li>
@@ -804,8 +641,7 @@
         <p>icon-dialpad</p>
       </li>
       <li>
-        <aside class="icon icon-communications-bluetooth"></aside>
-        <p>icon-communications-bluetooth</p>
+        <aside class="icon icon-speaker-bluetooth"></aside>
         <p>icon-speaker-bluetooth</p>
       </li>
       <li>
